# distillix

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  LEFTOFF.md  LICENSE  README.md  chat.py  pyproject.toml  requirements.txt  vertex_config.yaml  vertex_training.py
foundry/: cot_generator.py  data_pipeline.py  execution_filter.py  generate.py  minimax_direct.py  opencode_client.py  teacher.py
hf_space/: app.py  requirements.txt  train_app.py
notebooks/: BitNet_Training_MSStyle.ipynb  Superposition_Distillation_Colab.ipynb  colab_primeintellect_one_model.ipynb  distillix_300m_distillation.py  resume_titan_training.py  superposition_distillation.py  superposition_distillation_v2.py  superposition_distillation_v2_1.py
scripts/: cleanup_vast.sh  continue_train.py  glm_inference_full.py  glm_inference_int4.py  import_hf_synthetic1.py  kimi_k25_vast_deploy.sh  pack_weights.py  pipeline_primeintellect_one_model.py  setup_cuda.sh  start_server.sh  train.sh  train_codetether.py  train_grok.py  train_v04.py  train_v05.py  vast_quantize_glm.sh
smelter/: __init__.py  bitnet.py  config.py  data.py  export.py  fogzo.py  loss.py  model.py  muon.py  optim.py  spin_solver.py  train.py
