[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distillix"
version = "0.1.0"
description = "Distill frontier intelligence into owned edge models"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Distillix Team"}
]
keywords = [
    "machine-learning",
    "deep-learning",
    "knowledge-distillation",
    "bitnet",
    "quantization",
    "llm",
    "edge-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
    "datasets>=2.16.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
logging = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
]
all = [
    "distillix[dev,logging]",
]

[project.scripts]
dx = "distillix.cli:main"

[project.urls]
Homepage = "https://github.com/distillix/distillix"
Documentation = "https://distillix.ai/docs"
Repository = "https://github.com/distillix/distillix"

[tool.setuptools.packages.find]
where = ["."]
include = ["smelter*", "foundry*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
